--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -178,12 +178,10 @@ Obter localizações (lat/lon) por meio do OpenStreet Maps:
 - Atualizar o data.frame abaixo com as informações
 
 ```{r enderecos}
-ends = data.frame(instituto=c('IMECC', 'FEM', 'FEF'),
-           lat=c(-22.81583,-22.81938,-22.81476),
-           lon=c(-47.06769,-47.06592,-47.07333))
+ends = read.table('institutos.tab', sep='\t', header=TRUE)
 map = leaflet()
 map = addTiles(map)
-map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = ends$instituto)
+map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = ends$instituto, weight= 10,radius = 8)
 map
 ```
 
